--- a/SL.theme.css
+++ b/SL.theme.css
@@ -345,6 +345,7 @@ display: inline-block !important;}
 	.friends-row:hover,
 	#friends .friends-table .friends-row:hover, 
 	.friends-row:hover	{
+	transition: 150ms ease-in-out;
 	background: var(--dark-red)!important;
 	text-shadow: 2px 2px 2px black;
 	border: 2px solid var(--sec-color) !important;
@@ -362,7 +363,7 @@ display: inline-block !important;}
 	margin: 0.5em 2em !important;
     transition: 250ms;
 }
-#friends .friends-table .friends-row {transition: 250ms;}
+#friends .friends-table .friends-row {    transition: 150ms ease-in-out;}
 
 #friends .friends-table .friends-column-status {width: 95% !important; }
 #friends .friends-table .friends-row+.friends-row{
@@ -852,8 +853,8 @@ Settings
     background-color: var(--dark-red) !important;
     border-color: var(--sec-color) !important;
 }
-.checkbox-1ix_J3 svg g {
-    display: none;
+.checkbox-1ix_J3 svg g polyline{
+    stroke:var(--sec-color);
 }
 .checkbox .checkbox-inner input[type=checkbox]:checked+span {
     background-color: var(--dark-red) !important;
