--- a/SL.theme.css
+++ b/SL.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Shadow Light)","description":"Dark style theme with shadows and light color borders. Background Image Version","author":"Asteria","version":"1.1.1"}*//{}
+//META{"name":"Shadow Light","description":"Dark style theme with shadows and light color borders. Background Image Version","author":"Asteria","version":"1.1.1"}*//{}
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 
 /* Main Variables
