--- a/shadow_light(transparent).theme.css
+++ b/shadow_light(transparent).theme.css
@@ -957,7 +957,7 @@ background: rgba(0,0,0,0.25) !important; }
     /* 7/25 Fix */
 
     .containerCozy-jafyvG {
-        background: rgba(0,0,0,0.45);
+        background: rgba(0,0,0,0.65); /* message box background color/opacity*/
         box-sizing: border-box;
         display: block;
         margin-left: 20px;
