--- a/SL.theme.css
+++ b/SL.theme.css
@@ -955,7 +955,7 @@ color: #fff !important; }
 background: rgba(0,0,0,0.25) !important; }
 
     /* 7/25 Fix */
-
+.containerCompact-3V0ioj,
     .containerCozy-jafyvG {
         background: rgba(0,0,0,0.45);
         box-sizing: border-box;
