updated the guilds popout

--- a/Shadow Light Theme/Shadow_Light(Transparent).theme.css
+++ b/Shadow Light Theme/Shadow_Light(Transparent).theme.css
@@ -1374,7 +1374,7 @@ div#bd-pub-button {
 
 
 
-	/* Guilds Popout */
+	/* Guilds Popout Disabled */ /*
 
 	
 
@@ -1401,7 +1401,7 @@ div#bd-pub-button {
 }
 
 
-
+*/
 /* 
 
 --------
