--- a/SL.theme.css
+++ b/SL.theme.css
@@ -1,6 +1,6 @@
 //META{"name":"Shadow Light","description":"Dark style theme with shadows and light color borders. Background Image Version","author":"Asteria","version":"1.2.0"}*//{}
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
-@import url('https://gist.githubusercontent.com/Asteria5675/e112030e7a1d5ab97258b7136d3e9675/raw/ba1cf58c23933489f467820453808e96e4dabcf9/sl_source.css');
+@import url('https://raw.githubusercontent.com/Asteria5675/BetterDiscordThemes/master/SourceCodes/sl_source.css');
 
 /* Main Variables
 - Change the color variables if desired*/
