--- a/SL.theme.css
+++ b/SL.theme.css
@@ -20,6 +20,8 @@
 --------------------------------------------------------
  Custom Image Background
  ===================================
+*/
+
 .appMount-3VJmYg,
 .container-2lgZY8,
 .chat,
