--- a/SourceCodes/sl_source.css
+++ b/SourceCodes/sl_source.css
@@ -447,7 +447,7 @@ Private Channels
     box-shadow: 1px 1px 2px black;}
 
 #app-mount .members-1998pB {
-	background: rgba(0,0,0,0);
+	background: rgba(0,0,0,0) !important;
 	/* rgba(0,0,0,0.45) for darker members list */
 }
 .membersGroup-v9BXpm {
@@ -890,7 +890,7 @@ background: rgba(0,0,0,0.25) ; }
         -ms-user-select: text;
         -webkit-box-sizing: border-box;
         -webkit-user-select: text;
-        border-bottom: 1px solid rgba(0,0,0,0.125);
+        border-bottom: 1px solid rgba(0,0,0,0.125) !important;
     }
 
     .messageGroupWrapper-o-Zw7G {
