--- a/SourceCodes/sl_source.css
+++ b/SourceCodes/sl_source.css
@@ -214,11 +214,14 @@ background-color: transparent;}
     background: rgba(0,0,0,0.65);
 }
 .channelTextArea-rNsIhG {
+    margin-left: 20px !important;
+    background: transparent;
+}
+#app-mount .inner-zqa7da {
 	margin-left: 20px !important;
     background: var(--main-color);
     border: 2px solid var(--sec-color);
 }
-
  .inner-zqa7da {
 	 background: var(--main-color);
  }
@@ -470,7 +473,7 @@ Private Channels
 	.private-channels .channel:hover .avatar-small {
     box-shadow: 1px 1px 2px black;}
 
-.members-1998pB {
+#app-mount .members-1998pB {
 	background: rgba(0,0,0,0);
 	/* rgba(0,0,0,0.45) for darker members list */
 }
