--- a/SourceCodes/sl_source.css
+++ b/SourceCodes/sl_source.css
@@ -213,7 +213,7 @@ background-color: transparent;}
 	margin-left: 0 !important;
     background: rgba(0,0,0,0.65);
 }
-.channelTextArea-rNsIhG {
+#app-mount .channelTextArea-rNsIhG {
     margin-left: 20px !important;
     background: transparent;
 }
