--- a/SourceCodes/sl_source.css
+++ b/SourceCodes/sl_source.css
@@ -911,7 +911,7 @@ background: rgba(0,0,0,0.25) ; }
         user-select: text;
         word-wrap: break-word;
         margin-bottom: 15px ;
-        border: 1px solid var(--sec-color) ;
+        border: 1px solid var(--sec-color) !important;
         padding-left: 12px ;
         -moz-user-select: text;
         -ms-user-select: text;
